--- a/Tareas/Landing page/assets/css/styles.css
+++ b/Tareas/Landing page/assets/css/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Maven+Pro:wght@400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 
-:root{
+:root {
     --fuenteTextos: 'Roboto', sans-serif;
     --fuenteTitulos: 'Maven Pro', sans-serif;
 
@@ -11,38 +11,78 @@
     --blanco: #F1F1F1;
 }
 
-html{
+html {
     font-size: 62.5%;
 }
 
-body{
+body {
     font-size: 1.6rem;
     box-sizing: border-box;
     margin: 0;
     font-family: var(--fuenteTextos);
 }
+
 /* 1 rem = 10px*/
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 }
 
 
 /* Aux */
 
-a{
+a {
     text-decoration: none;
 }
 
-a:hover{
+a:hover {
+    cursor: pointer;
+}
+
+.button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    color: black;
+    border: solid 1px black;
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
+    font-size: 1.6rem;
+    font-family: var(--fuenteTitulos);
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.button:hover{
+    background-color: var(--principal);
+    color: var(--blanco);
+    transition: 0.5s;
+    border: none;
+}
+
+.img-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-container img {
+    width: 100%;
+    border-radius: 2.5rem;
+}
+
+.img-container img:hover {
     cursor: pointer;
 }
 
 /* Header */
 
-.header{
+.header {
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
     flex-direction: column;
     color: white;
     margin: 0;
@@ -53,23 +93,23 @@ a:hover{
 /*header top*/
 
 /*Siman logo*/
-.header .header__siman{
+.header .header__siman {
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;   
+    grid-template-columns: 1fr 2fr 1fr;
     background-color: var(--principal);
 
 }
 
-.header .header__siman img{
+.header .header__siman img {
     width: 15rem;
     height: 5rem;
     margin-left: 1rem;
     margin-right: 1rem;
-    
+
 }
 
 /*Searchbar*/
-.header .header__siman .searchbar-section{
+.header .header__siman .searchbar-section {
     display: flex;
     justify-content: left;
     background-color: var(--principalOscuro);
@@ -77,14 +117,15 @@ a:hover{
     height: 5vh;
     margin-top: 0.8rem;
 }
-.header .header__siman .searchbar-section .searchbar{
+
+.header .header__siman .searchbar-section .searchbar {
     display: flex;
     flex-direction: row;
     justify-content: center;
     width: 100%;
 }
 
-.header .header__siman .searchbar-section .searchbar input{
+.header .header__siman .searchbar-section .searchbar input {
     width: 100%;
     height: 100%;
     border: none;
@@ -93,30 +134,30 @@ a:hover{
     color: whitesmoke;
     font-size: 1.6rem;
 
-    &:focus{
+    &:focus {
         outline: none;
     }
 
-    &:active{
+    &:active {
         outline: none;
     }
 }
 
-.header .header__siman .searchbar-section .searchbar .searchbar__logo{
+.header .header__siman .searchbar-section .searchbar .searchbar__logo {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 5vw;
     height: 5vh;
-} 
+}
 
-.header .header__siman .searchbar-section .searchbar .searchbar__logo:hover{
+.header .header__siman .searchbar-section .searchbar .searchbar__logo:hover {
     color: var(--principal);
 }
 
 /* User */
 
-.header .header__siman .user-section{
+.header .header__siman .user-section {
     display: flex;
     justify-content: right;
     align-items: center;
@@ -126,112 +167,498 @@ a:hover{
     gap: 1.5rem;
 }
 
-.header .header__siman .user-section .user__icon{
+.header .header__siman .user-section .user__icon {
     font-size: 2.5rem;
 }
 
-.header .header__siman .user-section a:hover{
+.header .header__siman .user-section a:hover {
     color: var(--principalOscuro);
 }
+
 /*Icons*/
 
-.header .header__siman .user-section .user__icon{
+.header .header__siman .user-section .user__icon {
     color: white;
     font-size: 3rem;
 }
 
-.header .header__siman .user-section .cart__icon{
+.header .header__siman .user-section .cart__icon {
     color: white;
     font-size: 2.5rem;
 }
 
 /*Header navbar*/
 
-.header .header__navbar{
+.header .header__navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     background-color: var(--blanco);
-    height: 6vh;
 }
 
-.header .header__navbar a{
+
+@media (min-width: 768px){
+    .header .header__navbar {
+        flex-direction: row;
+        justify-content: space-between;
+        background-color: var(--blanco);
+        height: 6vh;
+    }
+}
+
+.header .header__navbar a {
     color: black;
 }
 
-.header .header__navbar a:hover{
+.header .header__navbar a:hover {
     color: var(--principal);
 }
 
 /* Services */
-.header .header__navbar .services-section{
+.header .header__navbar .services-section {
     display: flex;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
     margin-left: 2rem;
     font-size: 2rem;
+    padding-right: 4rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+}
+
+@media (min-width: 768px) {
+    .header .header__navbar .services-section {
+        display: flex;
+        justify-content: left;
+        align-items: center;
+        margin-left: 2rem;
+        font-size: 2rem;
+    }
+    
+
 }
 
 
 
 /*Navbar*/
 
-.header .header__navbar .navbar-section{
+.header .header__navbar .navbar-section {
     display: flex;
     justify-content: right;
     align-items: center;
     margin-right: 1rem;
 }
 
-.header .header__navbar .navbar-section .navbar{
+.header .header__navbar .navbar-section .navbar {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 1.5rem;
     font-size: 1.6rem;
 }
 
+@media (min-width: 768px) {
+    .header .header__navbar .navbar-section .navbar {
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 1.5rem;
+        font-size: 1.6rem;
+    }
+    
+}
+
+
+
 /*Main content*/
 
-.main-content{
+.main-content {
     display: flex;
     flex-direction: column;
     margin-top: 1.5rem;
 }
 
-.main-content .products-section{
+.main-content .products-section {
     display: flex;
     flex-direction: column;
     gap: 2rem;
 }
 
 /*Product*/
-.main-content .products-section .banner-section .banner-section__img-div{
+.main-content .products-section .banner-section .banner-section__img-div {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
-.main-content .products-section .banner-section .banner-section__img-div img{
+.main-content .products-section .banner-section .banner-section__img-div img {
     width: 90%;
     border-radius: 2rem;
 }
 
 /*Fashion*/
 
-@media (min-width: 768px){
-    .main-content .products-section .fashion-section .fashion-section__div{
+.main-content .products-section .fashion-section .fashion-section__div {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+    margin: 0 5rem;
+}
+
+.main-content .products-section .fashion-section .fashion-section__div .woman-div {
+    grid-column: 1/3;
+    grid-row: 1/3;
+    width: 100%;
+    margin: auto;
+}
+
+
+
+@media (min-width: 768px) {
+    .main-content .products-section .fashion-section .fashion-section__div {
         display: grid;
-        grid-template-columns: 2fr 1fr 1fr;
+        grid-template-columns: repeat(4, 1fr);
         gap: 2rem;
     }
-    
-    .main-content .products-section .fashion-section .fashion-section__div .woman-div{
-        grid-row: 2/3;
+
+    .main-content .products-section .fashion-section .fashion-section__div .woman-div {
+        grid-column: 1/3;
+        grid-row: 1/3;
+    }
+
+    .main-content .products-section .fashion-section .fashion-section__div .fashion-section__div__img-container img {
+        width: 100%;
     }
 
 }
 
-.main-content .products-section .fashion-section .fashion-section__div .fashion-section__div__img-container img{
+
+/* Discount */
+.discount-section{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+    margin: 0 5rem;
+}
+
+.discount-section__title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.discount-section__title h2{
+    font-size: 1.5rem;
+}
+
+.main-content .products-section .discount-section-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+    height: 100%;
+    width: 95%;
+}
+
+@media (min-width: 768px) {
+    .main-content .products-section .discount-section-container{
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        gap: 2rem;
+    }
+
+    .discount-section__title h2 {
+        margin: 0 auto;
+        font-size: 2.5rem;
+    }
+
+}
+
+.product-container__info-title h3,
+.product-container__info-title h2,
+.product-container__info-title p {
+    margin: 0; /* Elimina los márgenes predeterminados */
+    padding: 0; /* Elimina el padding predeterminado */
+}
+
+.main-content .products-section .discount-section-container .product-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;    
+    cursor: pointer;
+}
+
+.product-container__info{
+    margin-top: 1rem;
+    height: 100%;
+}
+
+.main-content .products-section .discount-section-container .product-container img {
+    width: 60%;
+}
+
+.product-container__info-product{
+    font-size: 1.5rem;
+    height: 8vh;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    box-sizing: border-box;
+    padding: 0.5rem;
+}
+
+.product-container__info-sellby{
+    margin-top: 0;
+}
+
+.product-container__info-brand{
+    font-size: 1.5rem;
+    font-weight: normal;
+    color: #1f1f1f;
+}
+
+.product-container__info-price{
+    color: var(--principal);
+    margin-bottom: 0;
+}
+
+.product-container__info-previousprice{
+    color: #1f1f1f;
+    text-decoration: line-through;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.coutesy-container{
+    margin-top: 0;
+    border-radius: 0.3rem;
+    font-size: 1.5rem;
+    color: var(--blanco);
+    background-color: #03499a;
+    width: 9vh;
+}
+
+.product-container__info-coutesy{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem auto;
+}
+
+/*Home section*/
+
+.home-section__content{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+    margin: 0 2rem;
+}
+
+.bed-principal-image{
+    grid-column: 1/3;
+    grid-row: 1/2;
     width: 100%;
-    border-radius: 2.5rem;
+    margin: auto;
+}
+
+@media (min-width: 768px) {
+    .home-section__content{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(2, 1fr);
+        gap: 2rem;
+        margin: 0 5rem;
+    }
+
+    .bed-principal-image{
+        grid-column: 2/3;
+        grid-row: 1/3;
+        width: 100%;
+        margin: auto;
+        
+    }
+    
+}
+
+
+/**Electronic section*/
+
+.electronics-section__content{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+    margin: 0 2rem;
+}
+
+.audifonos-principal{
+    grid-column: 1/3;
+    grid-row: 1/2;
+    width: 100%;
+    margin: auto;
+}
+
+@media (min-width: 768px) {
+    .electronics-section__content{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(2, 1fr);
+        gap: 2rem;
+        margin: 0 5rem;
+    }
+
+    .audifonos-principal{
+        grid-column: 1/2;
+        grid-row: 1/3;
+        width: 100%;
+        margin: auto;
+    }
+}
+
+/*Information*/
+
+.info-section{
+    margin-top: 10rem;
+    background-color: var(--blanco);
+    font-size: 1.6rem;
+}
+
+.info-section__content{
+    display: flex;
+    flex-direction: column;
+    margin: 0 2rem;
+}
+
+.about-section{
+    margin:2rem 0;
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+}
+
+@media (min-width: 768px){
+    .info-section__content{
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        gap: 2rem;
+        margin: 5rem 2rem;
+    }
+    
+    .about-section{
+        margin:0 3rem;
+        flex-direction: row;
+        justify-content: space-between;
+        
+    }
+    
+    .subscribe-section__subscribe-email{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 5rem;
+    }
+}
+
+
+
+.info-section__content h2{
+    margin: 0;
+    font-size: 1.6rem;
+    text-transform: uppercase;
+}
+
+
+.subscribe-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+
+}
+
+.subscribe-section__logo img{
+    width: 50%;
+    
+}
+
+.info-sections{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+
+}
+
+
+.info-sections a{
+    color: var(--gris);
+}
+
+.info-sections a:hover{
+    color: var(--principal);
+    text-decoration: underline;
+}
+
+
+
+.susbscribe-input{
+    border: none;
+    border-radius: 0.4rem;
+    height: 100%;
+    width: 75%;
+    &:focus {
+        outline: none;
+    }
+
+    &:active {
+        outline: none;
+    }
+}
+
+.subscribe-button{
+    border-radius: 0.4rem;
+    border: none;
+    background-color: black;
+    color: white;
+    height: 100%;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.subscribe-button:hover{
+    background-color: var(--principal);
+    transition: 0.3s;
+}
+
+/*Footer*/
+
+.footer{
+    background-color: var(--gris);
+    color: var(--blanco);
+}
+
+.footer-container{
+    display: flex;
+    flex-direction: column;
+    gap: 0rem;
+    margin: auto 2rem;
+}
+
+.footer-section p, .footer-section a{
+    margin: 1rem 0 0.5rem 0;
+}
+
+@media (min-width: 768px){
+    .footer-container{
+        flex-direction: row;
+        font-size: 1.2rem;
+        gap: 3rem;
+        margin: auto 2rem;
+    }
+    
+}
+
+.payment-methods-section{
+    font-size: 2rem;
+    margin-top: 1rem;
 }
