--- a/Tareas/Landing page/assets/css/styles.css
+++ b/Tareas/Landing page/assets/css/styles.css
@@ -33,12 +33,20 @@ body {
 
 /* Aux */
 
+h1,h2,h3,h4{
+    font-family: var(--fuenteTitulos);
+}
+
 a {
     text-decoration: none;
 }
 
 a:hover {
     cursor: pointer;
+}
+
+a:visited{
+    color: black;
 }
 
 .button{
@@ -51,7 +59,7 @@ a:hover {
     border-radius: 0.5rem;
     padding: 0.5rem 1rem;
     font-size: 1.6rem;
-    font-family: var(--fuenteTitulos);
+    font-family: var(--fuenteTextos);
     transition: 0.5s;
     cursor: pointer;
 }
@@ -96,12 +104,12 @@ a:hover {
     
 }
 
-.section__container{
+/* .section__container{
     background-color: var(--blanco);
     border-radius: 2rem;
     margin: 0 2rem;
     box-shadow: var(--gris) 0px 0px 2px;
-}
+} */
 
 /* Header */
 
@@ -125,13 +133,26 @@ a:hover {
 
 }
 
-.header .header__siman img {
-    width: 15rem;
-    height: 5rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
-
+.logo-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--principal);
 }
+
+.header .header__siman img {
+    content: url(https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/979ce0a0-4ad7-4047-b8ca-98a96feaefd6___c0e8cd3ea762f9db4b2bd7751174f7fa.svg);
+    width: 50%;
+    margin: 1rem 1rem;
+}
+
+@media (min-width: 768px){
+    .header .header__siman img {
+        content: url(https://siman.vtexassets.com/assets/vtex.file-manager-graphql/images/logo22___088f447617aa37fc97a1e991ae908fe0.png);
+    }
+}
+
+
 
 /*Searchbar*/
 .header .header__siman .searchbar-section {
@@ -140,7 +161,7 @@ a:hover {
     background-color: var(--principalOscuro);
     border-radius: 2rem;
     height: 5vh;
-    margin-top: 0.8rem;
+    margin: 2rem 0;
 }
 
 .header .header__siman .searchbar-section .searchbar {
@@ -172,8 +193,16 @@ a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 5vw;
-    height: 5vh;
+    width: 50%;
+}
+
+@media (min-width: 768px){
+    .header .header__siman .searchbar-section .searchbar .searchbar__logo {
+        justify-content: center;
+        align-items: center;
+        width: 10%;
+    }
+ 
 }
 
 .header .header__siman .searchbar-section .searchbar .searchbar__logo:hover {
@@ -331,6 +360,10 @@ a:hover {
 
 /*Fashion*/
 
+.fashion-section{
+    background-color: var(--blanco);
+}
+
 .main-content .products-section .fashion-section .fashion-section__div {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -374,7 +407,7 @@ a:hover {
     gap: 2rem;
     justify-content: center;
     align-items: center;
-    margin: 0 5rem;
+    margin: 0 4rem;
 }
 
 
@@ -383,7 +416,7 @@ a:hover {
     grid-template-columns: repeat(2, 1fr);
     gap: 2rem;
     height: 100%;
-    width: 95%;
+    width: 100%;
 }
 
 @media (min-width: 768px) {
@@ -433,6 +466,10 @@ a:hover {
     width: 60%;
 }
 
+.discount-section-container a{
+    color: black;
+}
+
 .product-container__info-product{
     font-size: 1.5rem;
     height: 8vh;
@@ -477,10 +514,15 @@ a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
     margin: 1rem auto;
 }
 
 /*Home section*/
+
+.home-section{
+    background-color: var(--blanco);
+}
 
 .home-section__content{
     display: grid;
@@ -517,6 +559,10 @@ a:hover {
 
 
 /**Electronic section*/
+
+.electronics-section{
+    background-color: var(--blanco);
+}
 
 .electronics-section__content{
     display: grid;
@@ -560,7 +606,8 @@ a:hover {
 .info-section__content{
     display: flex;
     flex-direction: column;
-    margin: 0 2rem;
+    margin: 0;
+    padding: 0 1rem;
 }
 
 .about-section{
@@ -788,3 +835,236 @@ gap: 2rem;
 
 /*Product page*/
 
+.full-product-section__container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+}
+
+.full-product_image{
+    width: 100%;
+}
+
+@media (min-width: 768px){
+    .full-product-section__container{
+        display: flex;
+        flex-direction: row;
+        gap: 2rem;
+        margin: 0 2rem;
+    }
+
+    .full-product_image{
+        width: 75%;
+    }
+}
+
+
+
+.full-product__especs{
+    display: flex;
+    flex-direction: column;
+    
+}
+
+
+
+.full-product__buy{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin: 2rem;
+}
+
+.full-product__aprice{
+    font-size: 2rem;
+    font-weight: bold;
+    margin: 0;
+    margin-top: 2rem;
+}
+
+.full-product__pprice{
+    font-size: 1.6rem;
+    text-decoration: line-through;
+    margin: 0;
+}
+
+.full-product__brand{
+    font-size: 1.6rem;
+    color: var(--gris);
+    margin: 1rem 0;
+}
+
+.full-product-section__title p span{
+    font-weight: bold;
+}
+
+.full-product__product{
+    font-size: 3rem;
+    margin: 0;
+}
+
+.full-product__buttons{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+@media (min-width: 768px){
+    .full-product__buttons{
+        flex-direction: row;
+        gap: 1rem;
+    }
+    
+}
+
+.envios{
+    border: black 1px solid;
+    border-radius: 1rem;
+    gap: 1rem;
+    padding: 0 0.2rem;
+
+}
+
+.envios:hover{
+    background-color: var(--principal);
+    color: var(--blanco);
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.envios p{
+    font-size: 1.5rem;
+    display: flex;
+    gap: 0.5rem;
+}
+
+.checks{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+.full-product__buy-number{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    height: 15%;
+}
+
+.full-product__buy-input{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+
+.full-product__input{
+    border: var(--blanco) 1px solid;
+    border-radius: 0.4rem;
+    height: 100%;
+    width: 100%;
+    &:focus {
+        outline: none;
+    }
+
+    &:active {
+        outline: none;
+    }
+}
+
+.button-add{
+    border-radius: 0.4rem;
+    border: none;
+    color: black;
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.button-buy{
+    border-radius: 0.4rem;
+    border: black 1px solid;
+    background-color: transparent;
+    color: black;
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+button:hover{
+    background-color: var(--principal);
+    color: var(--blanco);
+    transition: 0.3s;
+    border: white 1px solid;
+}
+
+
+.full-product__warranty h2{
+    font-size: 2rem;
+    margin: 0;
+    margin-top: 2rem;
+    color: var(--principal);
+}
+
+.full-product__warranty p{
+    font-size: 1.6rem;
+    color: var(--gris);
+    margin: 1rem 0;
+}
+
+.full-product__details{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin: 2rem;
+}
+
+@media (min-width: 768px){
+    
+    .full-product__details{
+        flex-direction: row;
+        gap: 2rem;
+        margin: 2rem;
+    }
+}
+
+.description-title{
+    background-color: var(--blanco);
+    margin: 2rem 0;
+    padding: 0.1rem 0;
+    border-radius: 2rem;
+
+}
+
+.full-product__description p span{
+    font-weight: bold;
+}
+th, td {
+    padding: 1.5rem;
+    border-bottom: 1px solid #ddd;
+    text-align: left;
+    font-size: 1.6rem;
+}
+
+td:first-child {
+    font-weight: bold;
+}
+
+td {
+    color: #333;
+}
+
+tr:hover {
+    background-color: #f1f1f1;
+}
+
+table {
+    border-spacing: 0;
+}
