--- a/Tareas/Creación de una página web utilizando el DOM/assets/css/style.css
+++ b/Tareas/Creación de una página web utilizando el DOM/assets/css/style.css
@@ -31,15 +31,46 @@ li{
     list-style: none;
 }
 
-/* Diseño del header */
-header {
+/* Diseño del contenido */
+.container {
+    padding:2rem;
+}
+
+article {
+    background: #fff;
+    padding: 2rem;
+    margin-bottom: 2rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.default-btn{
     background-color: var(--header-background);
     color: #fff;
-    padding: 2rem;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.hidden{
+    display: none;
+}
+
+/* Diseño del header */
+.header {
+    background-color: var(--header-background);
+    color: #fff;
+    padding: 1rem;
     text-align: center;
 }
 
-header ul {
+.header h1{
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+    cursor: pointer;
+}
+
+.header ul {
     margin: 0;
     padding: 0;
     display: flex;
@@ -48,12 +79,12 @@ header ul {
 }
 
 @media (min-width: 768px) {
-    header {
+    .header {
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
-    header ul{
+    .header ul{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -62,9 +93,6 @@ header ul {
     }
 }
 
-header h1 {
-    margin: 0;
-}
 
 /* Diseño del main */
 .main-content {
@@ -88,12 +116,7 @@ header h1 {
 }
 
 .main-btn{
-    background-color: var(--header-background);
-    color: #fff;
-    padding: 0.5rem 1rem;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+    margin-bottom: 1rem;
 }
 
 @media (min-width: 768px) {
@@ -104,23 +127,118 @@ header h1 {
 }
 
 .main-content h1 {
-    font-size: 2.5rem;
-    margin-bottom: 10px;
+    font-size: 2rem;
+    margin-bottom: 0.5rem;
 }
 
-.main-content p {
-    font-size: 1.5rem;
-    margin-bottom: 2rem;
+@media (min-width: 768px){
+    .main-content h1 {
+        font-size: 2.5rem;
+        margin-bottom: 1rem;
+    }
+    
+    .main-content p {
+        font-size: 1.5rem;
+        margin-bottom: 2rem;
+    }
+    
 }
 
-/* Diseño del contenido */
-.container {
-    padding:2rem;
+/* Diseño de la review */
+
+.game-review {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
 }
 
-article {
-    background: #fff;
-    padding: 2rem;
-    margin-bottom: 2rem;
+@media (min-width: 768px) {
+    .game-review {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .game-info{
+        grid-column: 1 / 3;
+    }
+    
+}
+
+.game-review img {
+    max-width: 90%;
+    height: 15rem;
+    border-radius: 0.2rem;
+    margin-bottom: 1rem;
+}
+
+@media (min-width:768px){
+    .game-review img{
+        object-fit: fill;
+        width: 90%;
+        height: 20rem;
+        border-radius: 0.2rem;
+        margin-bottom: 1rem;
+    }
+    
+}
+
+.game-review h2 {
+    font-size: 2rem;
+    margin: 0;
+
+}
+
+/* Diseño del formulario */
+.subscribe-section {
+    background-color: var(--background-color);
+    text-align: center;
+    padding-bottom: 1rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.subscribe-section h2 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+
+.subscribe-section p {
+    font-size: 1.2rem;
+    margin-bottom: 1.5rem;
+}
+
+#subscribe-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#subscribe-form input[type="email"] {
+    padding: 0.5rem;
+    font-size: 1rem;
+    margin-bottom: 1rem;
+    width: 100%;
+    max-width: 40rem;
+    border: 1px solid #ccc;
+    border-radius: 0.5rem;
+}
+
+#subscribe-form button {
+    background-color: var(--primary-color);
+    color: #fff;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 0.5rem;
+    cursor: pointer;
+}
+
+#subscribe-form button:hover {
+    background-color: var(--secondary-color);
+}
+
+/*Footer*/
+footer {
+    background-color: var(--header-background);
+    color: #fff;
+    padding: 0.5rem;
+    text-align: center;
 }
