--- a/Tareas/Creación de una página web utilizando el DOM/assets/css/style.css
+++ b/Tareas/Creación de una página web utilizando el DOM/assets/css/style.css
@@ -1,15 +1,15 @@
-/* Paleta de colores */
+/* Vars */
 :root {
-    --primary-color: #4CAF50; /* Verde suave */
-    --secondary-color: #FF9800; /* Naranja suave */
-    --background-color: #f4f4f4; /* Gris claro */
-    --text-color: #333; /* Gris oscuro */
-    --header-background: #333; /* Gris oscuro */
-    --main-background: linear-gradient(to bottom, #4CAF50, #FF9800); /* Degradado verde a naranja */
-    --manin-background-alt: linear-gradient(to bottom, #FF9800, #4CAF50); /* Degradado naranja a verde */
+    --primary-color: #4CAF50; /* Green */
+    --secondary-color: #FF9800; /* Orange */
+    --background-color: #f4f4f4; /* Light grey */
+    --text-color: #333; /* Dark grey */
+    --header-background: #333; /* Dark grey */
+    --main-background: linear-gradient(to bottom, #4CAF50, #FF9800); /* Green to Orange */
+    --manin-background-alt: linear-gradient(to bottom, #FF9800, #4CAF50); /* Orange to Green */
 }
 
-/* Estilos básicos */
+/* Globals */
 body {
     font-family: 'Arial', sans-serif;
     background-color: var(--background-color);
@@ -31,7 +31,7 @@ li{
     list-style: none;
 }
 
-/* Diseño del contenido */
+/* Container */
 .container {
     padding:2rem;
 }
@@ -56,7 +56,7 @@ article {
     display: none;
 }
 
-/* Diseño del header */
+/* Header */
 .header {
     background-color: var(--header-background);
     color: #fff;
@@ -94,7 +94,7 @@ article {
 }
 
 
-/* Diseño del main */
+/* Main content */
 .main-content {
     background-size: cover;
     background-position: center;
@@ -144,7 +144,7 @@ article {
     
 }
 
-/* Diseño de la review */
+/* Reviews */
 
 .game-review {
     display: flex;
@@ -188,7 +188,7 @@ article {
 
 }
 
-/* Diseño del formulario */
+/* Subscribe */
 .subscribe-section {
     background-color: var(--background-color);
     text-align: center;
@@ -235,7 +235,7 @@ article {
     background-color: var(--secondary-color);
 }
 
-/*Footer*/
+/* Footer */
 footer {
     background-color: var(--header-background);
     color: #fff;
